0021306: Visualization, AIS_InteractiveContext - revise DisplayedModes() semantics Remove the AIS_InteractiveContext::DisplayedModes() method. Remove list of active display modes from AIS_GlobalStatus.